--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,32 @@
-@import url('https://fonts.googleapis.com/css2?family=Lobster+Two&family=Montserrat&display=swap');
-
-
+/* @import url('https://fonts.googleapis.com/css2?family=Lobster+Two&family=Montserrat&display=swap'); */
+@import url(//db.onlinewebfonts.com/c/6dd2f2510b4a00a5461b2455928209c2?family=BrandonGrotW01-Light);
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Montserrat', sans-serif;
 }
 
 
 body {
   margin: 0;
-  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: BrandonGrotW01-Light, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif; */
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  margin: 0% 10%;
-  background: url('./assets/images/bg2.webp');
+  color:rgb(251, 251, 251);
   background-position: center;
   background-size: cover;
-  opacity: 0.9;
+  background-repeat: no-repeat;
+  background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('./assets/images/bg2.webp');
+  height: 100%;
+  overflow-x: hidden;
+}
+
+.App{
+  height: 100%;
+  width: 80%;
+  margin: 0 auto;
 }
 
 code {
@@ -29,18 +35,18 @@ code {
 }
 
 h4{
-  font-size: 1rem;
-  color: rgb(56, 56, 56)
+  font-size: 1.2rem;
+  color: rgb(251, 251, 251);
 }
 
 h3{
-  font-size: 1rem;
-  color: rgb(56, 56, 56);
+  font-size: 1.2rem;
+  color: rgb(255, 255, 255);
   line-height: 2.5rem;
   margin: 2rem 0rem;
 }
 
-
-a {
-  color: rgb(56, 56, 56)
+p {
+  font-size: 1.1rem;
 }
+
