--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url(https://db.onlinewebfonts.com/c/6dd2f2510b4a00a5461b2455928209c2?family=BrandonGrotW01-Light);
+@import url("https://db.onlinewebfonts.com/c/6dd2f2510b4a00a5461b2455928209c2?family=BrandonGrotW01-Light");
 
 *{
   margin: 0;
